Fix mobile nav modal shop online button text align

--- a/src/components/MobileNavModal/MobileNavModal.scss
+++ b/src/components/MobileNavModal/MobileNavModal.scss
@@ -34,4 +34,9 @@
   &__location-detail {
     font-size: 1.125rem;
   }
+
+  &__button {
+    padding-top: calc(#{spacing(2)} - 0.125rem);
+    padding-bottom: calc(#{spacing(2)} + 0.125rem);
+  }
 }
